duplicate kayit kontrolu yapildi ve yeni kayitta olusan hata duzeltildi